gccida/c1/change_address
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/change_address/src/emit-rtl.c:2414:34: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  change_address( rtx memref, machine_mode mode, rtx addr) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/change_address/src/emit-rtl.c:2425:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64 *)memref[1]; 
                 ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/change_address/src/emit-rtl.c:2442:27: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_CONST_INT( ( machine_mode)memref, mode_size[v4]); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/change_address/src/emit-rtl.c:2446:40: error: use of undeclared identifier 'machine_mode'
mode_alignment = get_mode_alignment( ( machine_mode)v4); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/change_address/src/emit-rtl.c:2447:73: error: use of undeclared identifier 'machine_mode'
*( _QWORD *)&v3[1] = get_mem_attrs( v6, 0LL, 0LL, v7, mode_alignment, ( machine_mode)v4); 
                                                                        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/change_address/src/obj/emit-rtl.o] Error 1
